# Laurel

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-alpine  Dockerfile-debian  README.md  build_docker.sh  docker-compose.yml
crates/actix/: Cargo.toml
crates/actix/src/: config.rs  error.rs  handler.rs  lib.rs  types.rs  utils.rs
crates/common/: Cargo.toml
crates/common/src/: date_time.rs  lib.rs  types.rs
crates/handler/: Cargo.toml
crates/id-api/: Cargo.toml
crates/id-api/src/: id.rs  id_api.rs  lib.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs  types.rs
crates/logs-api/: Cargo.toml
crates/logs-api/src/: lib.rs
crates/middleware/: Cargo.toml
crates/middleware/src/: lib.rs  reqwest_middle.rs
crates/pg/: Cargo.toml
crates/pg/src/: lib.rs  types.rs
crates/redis/: Cargo.toml
crates/redis/src/: lib.rs
crates/tool-api/: Cargo.toml
crates/tool-api/src/: ip.rs  lib.rs  ua.rs
crates/uc-api/: Cargo.toml
crates/uc-api/src/: account.rs  account_api.rs  lib.rs  profile.rs  profile_api.rs
laurel-system/: Cargo.toml
laurel-system/config/: app.toml
laurel-system/scripts/: init.sql
laurel-system/src/: main.rs
laurel-system/src/docs/: dict_doc.rs  mod.rs
laurel-system/src/model/: dict_model.rs  fe_micro_service_model.rs  menu_model.rs  mod.rs  role_model.rs
laurel-system/src/repository/: dict_repository.rs  fe_micro_service_repository.rs  menu_repository.rs  mod.rs  role_repository.rs
laurel-system/src/routes/: dict_route.rs  fe_micro_service_route.rs  menu_route.rs  mod.rs
laurel-system/src/schema/: schema.rs
laurel-system/src/service/: dict_service.rs  fe_micro_service_impl.rs  menu_service.rs  mod.rs  token_service.rs
laurel-system/src/setup/: components_setup.rs  mod.rs
laurel-uc/: .env  Cargo.toml
laurel-uc/.cargo/: config.toml
laurel-uc/config/: app.toml
laurel-uc/scripts/: init.sql
laurel-uc/src/: main.rs
laurel-uc/src/model/: account_model.rs  mod.rs  passport_model.rs  profile_model.rs
laurel-uc/src/repository/: account_repository.rs  mod.rs  passport_repository.rs  profile_repository.rs
laurel-uc/src/routes/: account_route.rs  account_route_api.rs  mod.rs  profile_route.rs
laurel-uc/src/schema/: schema.rs
laurel-uc/src/service/: account_service.rs  mod.rs  profile_service.rs  token_service.rs
laurel-uc/src/setup/: components_setup.rs  mod.rs
laurel-uc/src/utils/: mod.rs  passport_utils.rs  token_utils.rs
logs/: Cargo.toml
logs/config/: app.toml
logs/scripts/: init.sql
logs/src/: main.rs  model.rs  repository.rs  route.rs  schema.rs  service.rs  setup.rs
system/: Cargo.toml  diesel.toml
system/config/: app.toml
system/scripts/: init.sql
system/src/: main.rs
system/src/docs/: system.rs
system/src/model/: account.rs  dict.rs  fe_micro_service.rs  menu.rs  mod.rs  profile.rs  ticket.rs
system/src/repository/: account.rs  dict.rs  fe_micro_service.rs  menu.rs  mod.rs  passport.rs  profile.rs  role.rs  ticket.rs
system/src/routes/: account.rs  account_api.rs  dict.rs  fe_micro_service.rs  menu.rs  mod.rs  profile.rs
system/src/schema/: schema.rs
system/src/service/: account.rs  dict.rs  fe_micro_service.rs  menu.rs  mod.rs  profile.rs  token.rs
system/src/setup/: components_setup.rs  mod.rs
system/src/utils/: passport_utils.rs
tools/: Cargo.toml
tools/config/: app.toml
tools/src/: main.rs
tools/src/model/: ip.rs  mod.rs
tools/src/route/: ip.rs  mod.rs  ua.rs
tools/src/service/: ip.rs  mod.rs  token.rs
tools/src/setup/: ip_searcher.rs  mod.rs
