[package]
name = "laurel-common"
description = "Laurel Common"
version = "1.0.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock", "std", "now"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
anyhow = "1"
log = "0.4.28"
clap = { version = "4", features = ["derive"] }
utoipa = { version = "5", features = ["actix_extras"] }