[package]
name = "laurel-logs-api"
version = "1.0.0"
edition = "2024"


[dependencies]
#reqwest = { version = "0.12.23", features = ["json", "cookies", "multipart"], default-features = false }
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
laurel-common = { workspace = true }
anyhow = "1"
bon = "3.8"
reqwest-middleware = { version = "0.4" , features = ["json", "multipart"]}
serde = { version = "1.0.228", features = ["derive"] }
laurel-middleware = { workspace = true }